[gd_scene load_steps=3 format=3 uid="uid://bouka2j7rfq1n"]

[ext_resource type="Script" path="res://addons/Uzil/Basic/UserSave/_test/test_user_save.gd" id="1_vy46x"]
[ext_resource type="Script" path="res://addons/Uzil/Test/misc/test_debug_log.gd" id="2_omi2t"]

[node name="root" type="Control" node_paths=PackedStringArray("debug_log", "user_edit", "profile_edit", "save_to_profile_checkbox", "file_name_edit", "file_full_path_label", "save_route_edit", "save_val_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vy46x")
debug_log = NodePath("HBoxContainer/VBoxContainer2/debug_text_edit")
user_edit = NodePath("HBoxContainer/VBoxContainer2/HBoxContainer/LineEdit")
profile_edit = NodePath("HBoxContainer/VBoxContainer2/HBoxContainer/LineEdit2")
save_to_profile_checkbox = NodePath("HBoxContainer/VBoxContainer2/HBoxContainer/CheckBox")
file_name_edit = NodePath("HBoxContainer/VBoxContainer2/HBoxContainer2/LineEdit")
file_full_path_label = NodePath("HBoxContainer/VBoxContainer2/HBoxContainer4/RichTextLabel2")
save_route_edit = NodePath("HBoxContainer/VBoxContainer2/HBoxContainer3/LineEdit")
save_val_edit = NodePath("HBoxContainer/VBoxContainer2/HBoxContainer3/LineEdit2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "Save"

[node name="load" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "Load"

[node name="test_simple" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "test_simple()"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel3" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "User/Profile"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 0.1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "User : "
fit_content = true
autowrap_mode = 0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Test"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="RichTextLabel2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Profile : "
fit_content = true
autowrap_mode = 0

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
text = "default"

[node name="RichTextLabel5" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "File"
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 0.1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
bbcode_enabled = true
text = "Name (include ext) : "
fit_content = true
autowrap_mode = 0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "test_save.sav"

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 0.1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
bbcode_enabled = true
text = "FullPath : "
fit_content = true
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="RichTextLabel4" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Save"
fit_content = true

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 0.1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
bbcode_enabled = true
text = "Route : "
fit_content = true
autowrap_mode = 0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "test"

[node name="RichTextLabel2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
bbcode_enabled = true
text = "Val : "
fit_content = true
autowrap_mode = 0

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
text = "123"

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Log"
fit_content = true

[node name="debug_text_edit" type="TextEdit" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_omi2t")

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 6.775)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Save" to="." method="test_save"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/load" to="." method="test_load"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/test_simple" to="." method="test_simple"]
